1.02.03
Added smoothing for spline traversal (to smooth out jerkiness e.g. at bottom of parabola)
Added code so the skater can fall off of spline when his velocity dotted with the unit normal of the segment is positive.
Found an instance of unconserved energy and remedied it.
Bugfix: pressing go after playing back a sequence inverts the angle.

1.02.02 (10-11-2006)
Bugfix: When he's stationary and the track is moved he doesn't fall.
Bugfix: When he's oscillating on the track and I lift the track up the skater 
            can end up oscillating back and forth, as if a track was there, but 
            it's not really there.
Fixed a memory leak.
Bugfix: 'Reset Skater' turns him upside down sometimes.
Bugfix: Reset doesn't work any more ... the skater is just frozen (and the 
            red dot doesn't go with him).
Bugfix: After a long time, the man is stopped and when I tried to grab him, all I could more around 
            was the little red dot, not the actual skater.

1.02.01 (10-11-2006)
Revision of dynamics to address problem at the bottom of a potential well.

1.02 (7-10-2006)
Made the grid overlay x-axis match the Energy-Position plot's x-axis.

1.01 (7-10-2006)
Posted on main site.

0.00.28 (6-8-2006)
Updated gravity controls.
Bugfix: Performance degrades when showing history points.
Bugfix: Grid intercepted mouse clicks.

0.00.26 (6-8-2006)
Fixed gravity controls.
Bugfix: readout of history points is incorrect. 

0.00.25 (6-7-2006)
Added an optional overlay grid.
Fixed a bug in the wiggle me.

0.00.24 (6-6-2006)
Bugfix in the build process (wouldn't run under 1.4)

0.00.23 (6-6-2006)
Renamed JNLP Launch title from Energy Sk8r to Energy Skate Park
Brightened the skater image.
Performance bugfix.

-Version 0.00.22 (6-2-2006)
Decreased the sensitivity of the 'return the skater' button; skater has to be completely offscreen (not partially offscreen)
Moved the pie chart legend to the bottom of the page.